WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
12986
REGRESSION(NativeListBox): Listboxes not updated when resized dynamically
https://bugs.webkit.org/show_bug.cgi?id=12986
Summary
REGRESSION(NativeListBox): Listboxes not updated when resized dynamically
Matt Lilek
Reported
2007-03-06 10:47:11 PST
Changing the size of a list box does not update it immediately. This happens in Safari 2.0.4 and was initially fixed by the new listbox implementation, but regressed in
r15359
with the fix for
bug 9861
/
bug 9859
.
Attachments
Reduction
(892 bytes, text/html)
2007-03-06 10:48 PST
,
Matt Lilek
no flags
Details
Reattach on list box size change
(35.47 KB, patch)
2007-03-06 11:18 PST
,
mitz
adele
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Matt Lilek
Comment 1
2007-03-06 10:48:11 PST
Created
attachment 13490
[details]
Reduction
mitz
Comment 2
2007-03-06 11:18:37 PST
Created
attachment 13492
[details]
Reattach on list box size change
Mark Rowe (bdash)
Comment 3
2007-03-06 19:54:22 PST
Landed in
r19998
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug