2007-03-06  Mitz Pettel  <mitz@webkit.org>

Reviewed by Adele.

        - fix http://bugs.webkit.org/show_bug.cgi?id=12986
          REGRESSION(NativeListBox): Listboxes not updated when resized dynamically

        Test: fast/forms/select-change-listbox-size.html

        * html/HTMLSelectElement.cpp:
        (WebCore::HTMLSelectElement::parseMappedAttribute): Reattach on list box size change.

2007-03-06  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Adele.

        - test for http://bugs.webkit.org/show_bug.cgi?id=12986
          REGRESSION(NativeListBox): Listboxes not updated when resized dynamically

        * fast/forms/select-change-listbox-size-expected.checksum: Added.
        * fast/forms/select-change-listbox-size-expected.png: Added.
        * fast/forms/select-change-listbox-size-expected.txt: Added.
        * fast/forms/select-change-listbox-size.html: Added.


Canonical link: https://commits.webkit.org/16815@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19998 268f45cc-cd09-0410-ab3c-d52691b4dbfc